Remove duplicate Feature Flagging models and parsers